# getting-started

./: .clang-format  .gitignore  .gitmodules  LICENSE.txt  Microchip.sln  NOTICE.txt  README.md  SECURITY.md  azure_rtos_iar.diff  gsg.code-workspace  mlc_config.json  spencer_setup_notes.md  x509-rido-notes.md  x509-self-sign-gsg.md
Arm/MPS3_AN524/app/: CMakeLists.txt  board_init.c  board_init.h  config.cmake  console.c  main.c
Arm/MPS3_AN524/lib/: CMakeLists.txt
MXChip/AZ3166/: .gitignore  AZ3166.code-workspace  CMakeLists.txt  CMakeSettings.json  TODO  VS.md  azure-pipelines.yml  environment.yaml  readme.md  rebuild.sh  secrets.txt  stm32.mak  vcpkg-configuration.json  vscode.md
MXChip/AZ3166/app/: CMakeLists.txt  azure_config.h  azure_config_sample.h  azure_device_x509_cert_config.h  azure_dps_x509_cert_config.h  azure_iothub.c  azure_iothub.h  azure_pnp_info.h  board_init.c  board_init.h  console.c  main.c  mqtt.c  networking.c  networking.c.ou  networking.h  nx_client.c  nx_client.h  pnp_device_info.h  sample_azure_iot.c  screen.c  screen.h  stm32f4xx_hal_conf.h  stm32f4xx_hal_msp.c  wwd_networking.c  wwd_networking.h
MXChip/AZ3166/cmake/: FindCMSIS.cmake  FindSTM32HAL.cmake
MXChip/AZ3166/lib/: CMakeLists.txt
MXChip/AZ3166/tools/: X509testcert.pem  cert_sign_req.csr  flash.bat  private_key.pem
Microchip/ATSAME54-XPRO/: ATSAME54-XPRO.code-workspace  CMakeLists.txt  azure-pipelines.yml  mcu.mak  readme.md  secrets.txt  vcpkg-configuration.json
Microchip/ATSAME54-XPRO/app/: CMakeLists.txt  azure_config.c  azure_config.h  azure_iot_embedded_sdk.c  azure_iot_embedded_sdk.h  azure_iot_mqtt.c  azure_iot_mqtt.h  azure_iothub.c  azure_iothub.h  azure_pnp_info.h  board_init.c  board_init.h  console.c  device_config.h  main.c  mqtt.c  mqtt.h  nx_client.c  nx_client.h  prompt.c  prompt.h
Microchip/ATSAME54-XPRO/lib/: CMakeLists.txt
Microchip/ATSAME54-XPRO/tools/: flash.bat  rebuild.bat
NXP/MIMXRT1060-EVK/: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  VS.md  azure-pipelines.yml  environment.yaml  readme.md  vcpkg-configuration.json  vscode.md
NXP/MIMXRT1060-EVK/app/: CMakeLists.txt  azure_central.c  azure_central.h  azure_config.c  azure_config.h  azure_config_sample.h  azure_device_x509_cert_config.h  azure_dps_x509_cert_config.h  azure_iot_config.h  azure_iot_embedded_sdk.c  azure_iot_mqtt.c  azure_iot_mqtt.h  azure_iothub.c  azure_iothub.h  azure_pnp_info.h  board_init.c  board_init.h  console.c  main.c  mqtt.c  mqtt.h  network.c  network.h  nx_azure_iot_ciphersuites.c  nx_client.c  nx_client.h  rtos_iot.c  rtos_iot.h  sync_time.c  sync_time.h
NXP/MIMXRT1060-EVK/lib/: CMakeLists.txt
NXP/MIMXRT1060-EVK/tools/: flash.bat  mimxrt1060-evk.cfg  rebuild.bat  rebuild.sh  rebuild_iar.bat
Renesas/RSK_RX65N_2MB/app/: CMakeLists.txt  azure_pnp_info.h  board_init.c  console.c  main.c  nx_client.c
Renesas/RSK_RX65N_2MB/lib/: CMakeLists.txt
Renesas/RX65N/: CMakeLists.txt
Renesas/RX65N/app/: CMakeLists.txt  board_init.c  main.c
Renesas/RX65N/lib/: CMakeLists.txt
Renesas/RX65N/tools/: rebuild.bat
Renesas/RX65N_Cloud_Kit/app/: CMakeLists.txt  azure_config.h  azure_pnp_info.h  board_init.c  board_init.h  console.c  main.c  nx_client.c  rx_networking.c  rx_networking.h
STMicroelectronics/B-L475E-IOT01A/app/: CMakeLists.txt  azure_config.c  azure_config.h  azure_iothub.c  azure_iothub.h  azure_pnp_info.h  board_init.c  board_init.h  console.c  main.c  networking.c  networking.h  networking_config.c  networking_config.h  sntp_client.c  sntp_client.h  stm_networking.c  stm_networking.h
STMicroelectronics/B-L475E-IOT01A/lib/: CMakeLists.txt
STMicroelectronics/B-L4S5I-IOT01A/app/: CMakeLists.txt  azure_pnp_info.h  board_init.c  console.c  main.c  nx_client.c  stm_networking.c
STMicroelectronics/B-U585I-IOT02A/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json
STMicroelectronics/B-U585I-IOT02A/app/: CMakeLists.txt  azure_config.h  azure_pnp_info.h  board_init.c  board_init.h  console.c  main.c  nx_client.c  stm_networking.c
STMicroelectronics/B-U585I-IOT02A/lib/: CMakeLists.txt
STMicroelectronics/B-U585I-IOT02A/tools/: flash.bat  rebuild.bat
STMicroelectronics/STM32L4/: .gitignore  CMakeLists.txt  readme.md
STMicroelectronics/STM32L4/app/: CMakeLists.txt  azure_config.h  azure_iothub.c  board_init.c  board_init.h  main.c  mqtt.c  networking.c  nx_client.c  stm_networking.c
STMicroelectronics/STM32L4/lib/: CMakeLists.txt
STMicroelectronics/STM32L4_L4+/: CMakeLists.txt  STM32L4.code-workspace  STM32L4plus.code-workspace  VS.md  azure-pipelines-l4s5.yml  azure-pipelines.yml  environment.yaml  readme.md  stm32.mak  vscode.md
STMicroelectronics/STM32L4_L4+/app/: CMakeLists.txt  azure_config.h  azure_config_sample.h  azure_dps_x509_cert_config.h  azure_pnp_info.h  board_init.c  board_init.h  console.c  device_config.h  main.c  mqtt.c  nx_client.c  nx_client.h  prompt.c  prompt.h  stm_networking.c  stm_networking.h
STMicroelectronics/STM32L4_L4+/lib/: CMakeLists.txt
STMicroelectronics/STM32L4_L4+/tools/: flash.bat
TI/MSP-EXP432E401Y/: CMakeLists.txt  MSP432E.code-workspace  azure-pipelines.yml  readme.md
TI/MSP-EXP432E401Y/app/: CMakeLists.txt  azure_config.h  azure_pnp_info.h  board_init.c  board_init.h  main.c  nx_client.c
TI/MSP-EXP432E401Y/lib/: .gitignore  CMakeLists.txt
TI/MSP-EXP432E401Y/tools/: flash.bat  rebuild.bat  rebuild.sh  rebuild_iar.bat
azure_iot_security_module/: CMakeLists.txt
azure_iot_security_module/src/: security_module_iothub.c  security_module_mqtt.c
common/: CMakeLists.txt  networking.c  networking.h  newlib_nano.c  sntp_client.c  sntp_client.h
common/azure/: azure_mqtt.c  azure_mqtt.h  cert.c  cert.h  hmac_sha256.h  sas_token.c  sas_token.h  sha256.c  sha256.h
core/lib/: CMakeLists.txt
core/src/: CMakeLists.txt  azure_iot_cert.c  azure_iot_cert.h  azure_iot_ciphersuites.c  azure_iot_ciphersuites.h  azure_iot_nx_client.c  json_utils.c  json_utils.h  networking.c  newlib_nano.c  sntp_client.c  sntp_client.h
nx_cloud/: CMakeLists.txt  nx_cloud.c  nx_cloud.h
(+2549 files in other folders)
